src/app/filter/filter-fields.component.less
@import (reference) "../../assets/stylesheets/patternfly-ng";

.filter-pf {
  a { cursor: pointer; }
  &.filter-fields {
    .form-group {
      padding-left: 0;
      width: 275px;
    }
    .typeahead-input-container {
      position: relative;
      padding-right: 0;
      .caret {
        position: absolute;
        top: 10px;
        right: 5px;
        z-index: 2;
      }
    }
  }
}

.filter-select {
  .btn-default {
    background-color: @color-pf-white;
    background-image: none;
    color: @color-pf-black-500;
    font-style: italic;
    font-weight: 400;
  }
  .avatar {
    height: 20px;
    margin-right: 5px;
  }
}

.input-group {
  .input-group-btn {
    .dropdown-menu>.selected>a {
      background-color: @color-pf-blue !important;
      border-color: @color-pf-blue-400 !important; // was #0076b7
      color: @color-pf-white;
    }
  }
}

